--- a/style.css
+++ b/style.css
@@ -11,7 +11,13 @@ html {
     margin-top: 3em;
 }
 
+body {
+    background-image: url("\images\boston-skyline-l.jpg"); 
+}
 
+
+
+ 
 
 
 h1, 
@@ -27,6 +33,7 @@ main
 {
     margin: 0 auto;
     max-width: 800px;
+    
     
 }
 
@@ -64,6 +71,28 @@ h3 {
 #languages {
     padding: 20px;
 }
+
+#projects{
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+
+#projectIcons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+
+#projectLabels {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-top: 10%;
+    padding-bottom: 5%;
+}
+
+
 
 
 
@@ -105,6 +134,9 @@ nav a:hover {
 footer {
     text-align: center;
 }
+
+
+
 
 
     
