--- a/style.css
+++ b/style.css
@@ -1,174 +1,165 @@
+
 * {
     font-family: sans-serif;
-    line-height: 1.618 em;  
+    line-height: 1.618em;
     box-sizing: border-box;
-    margin: 0;  
+    margin: 0;
     padding: 0;
 }
-
 html {
     font-size: 16px;
-    margin-top: 3em;
-
+    margin-top: 2.5em;
+    background: url(./images/boston-skyline-l.jpg) no-repeat center center fixed ;
+    background-size: cover;
+}
+container {
+    background: rgba(65, 66, 66, 0.5);
 }
 
 
 
-
-
- 
-
-
-h1, 
-h2,
- h3 {
-    color: blue;
-    text-align: center;
-    
+h1, h2, h3 {
+    color: ivory ;
+}
+main h2 {
+    padding-left: 1em;
 }
 
 header,
-main 
-{
+main,
+footer {
     margin: 0 auto;
     max-width: 800px;
-    
-    
 }
-
-#name {
-    display: flex;
-    justify-content: center;
-}
-
-
-#headShot {
-    padding-right: 5px;
-    height: 35%;
-    width: 35%;
-}
-
-#myBio {
-    
-    height: 412px;
-    width: 320px;
-    
-}
-
-#aboutMe {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    
-    
-}
-
-h3 {
-    text-align: start;
-}
-
-#languages {
-    text-align: center;
-    padding: 40px;
-    
-}
-
-#languagesHeading {
-    text-align: center;
-    padding-bottom: 20px;
-}
-
-#languagesList {
-    font-size: 25px;
-}
-
-#projects{
-    padding-top: 40px;
-    padding-bottom: 20px;
-}
-
-#projectIcons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-
-}
-
-#projectLabels {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-size: 25px;
-}
-
-#languageContainer {
-    display: flex;
-    justify-content: space-around;
-    padding-top: 20px;
-}
-
-#contactInfo {
-    padding-top: 40px;
-
-}
-
-#contactInfoHeading {
-    padding-bottom: 20px;
-}
-
-#contactInfoItems {
-    padding: 20px;
-    font-size: 20px;
-}
-
-
-
-
-
-
 header {
-    padding: 2em 0;
+    padding: 5em 0 2em 0; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: none;
 }
-
-header h1 { 
+header h1 {
     font-size: 3em;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+}
+header span {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    font-size: 1.5em;
+    color: ivory;
 }
 
+
+
+header section img {
+    
+    width: 250px;
+
+}
 
 nav {
     position: fixed;
-    top: 0; 
+    top: 0;
     left: 0;
     width: 100%;
-
     display: flex;
-    flex-direction: row;
+    flex-flow: row;
     justify-content: center;
-
-    background: #333;
+    background-color: rgba(50, 150, 133);
 }
-
 nav a {
     padding: .5em 2em;
     text-decoration: none;
-    color: white;
+    color: ivory;
 }
- 
-nav a:hover {
-    background:grey;
+body{
+    display: flex;
+    justify-content: center;
 }
+section {
+    margin: 1em 0;
+    min-height: 20em;
+}
+section > p {
+    margin: 1em 0;
+}
+section ul {
+    padding-left: 1.5em;
+}
+/* main section img {
+    width:150px;
+} */
+
+
+
+
+
+#aboutMe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: rgb(50, 150, 133, .8);
+    height: auto;
+    width: 100%;
+    border-radius: 7px;
+    padding-bottom: 1em;
+}
+#aboutMe p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: ivory;
+    border-radius: 7px;
+    padding-left: 3em;
+    padding-right: 3em;
+    text-align: center;
+}
+#aboutMe ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: ivory;
+    border-radius: 7px;
+    padding: 1em;
+}
+#projects {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    grid-column-gap: 1em;
+}
+#projects article {
+    background: rgb(50, 150, 133, .8);
+    border-radius: 7px;
+    padding: 1em;
+    color: ivory;
+}
+#projects article img {
+    width: 100%;
+    border: 1px;
+    border-radius: 7px;
+}
+#getInTouch {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    grid-column-gap: 1em;
+    padding-left: 5em;
+}
+
 
 footer {
+    display: flex;
+    align-self: flex-end;
+    margin-top: 3em;
+    margin-bottom: 1em;
+    color: ivory;
+    padding: 1em 0;
     text-align: center;
-    padding-bottom: 40px;
-    padding-top: 40px;
+    padding-left: 20em;
 }
-
-
-
-
-
-    
-
