--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ main,
 footer {
     margin: 0 auto;
     max-width: 850px;
-    /* background: rgba(42, 34, 41, .7); */
+    
 }
 header {
     padding: 5em 0 2em 0; 
@@ -102,9 +102,7 @@ section > p {
 section ul {
     padding-left: 1.5em;
 }
-/* main section img {
-    width:150px;
-} */
+
 
 
 
@@ -139,9 +137,7 @@ section ul {
     padding: 1em;
 }
 
-#myProjects {
-    /* background: rgb(42, 34, 41); */
-}
+
 #projects {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -150,11 +146,7 @@ section ul {
     
 }
 
-#projectIntro {
-    color: ivory;
-    background: rgb(42, 34, 41);
-    padding-left: 1em;
-}
+
 #projects article {
     background: rgb(42, 34, 41, .6 );
     border-radius: 7px;
@@ -167,11 +159,19 @@ section ul {
     border-radius: 7px;
 }
 #getInTouch {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto;
-    grid-column-gap: 1em;
-    padding-left: 5em;
+    
+    display: flex;
+    justify-content: space-around;
+    
+    
+    
+}
+
+#contactLink {
+    padding: 1em;
+    background-color: rgba(183, 222, 245, .5);
+    display: flex;
+    border-radius: 7px;
 }
 
 
